--- a/Payslip.Calculator/Payslip.Calculator.csproj
+++ b/Payslip.Calculator/Payslip.Calculator.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MathParser.org-mXparser" Version="4.3.3" />
+  </ItemGroup>
+
 </Project>
